Z-index fixes

--- a/src/components/Map/MapControls.scss
+++ b/src/components/Map/MapControls.scss
@@ -1,7 +1,7 @@
 .MapControls {
   position: absolute;
   top: 1rem;
-  z-index: 1200;
+  z-index: 1025;
   // left: 50%;
   margin-left: auto;
   margin-right: auto;
