--- a/src/components/Map/Scenarios/ScenarioInfo.scss
+++ b/src/components/Map/Scenarios/ScenarioInfo.scss
@@ -4,7 +4,7 @@
 .ScenarioInfo {
   position: absolute;
   bottom: 0;
-  z-index: 1500;
+  z-index: 1000;
   background-color: rgba(#fff, 0.8);
   border-radius: $border-radius;
   width: 50vw;
